adjustments for titles and fixing some CSS line spacing

--- a/new website/html5up-solid-state/assets/css/main.css
+++ b/new website/html5up-solid-state/assets/css/main.css
@@ -4121,7 +4121,7 @@ input, select, textarea {
 				}
 
 				#footer .inner .copyright {
-					margin: 4em 0 2em 0;
+					margin: 0em 0 2em 0;
 				}
 
 	}
